--- a/index.html
+++ b/index.html
@@ -5,248 +5,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stream IPTV Brasil - Seu melhor IPTV para toda a família</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    body { background: #0d0d0d; color: #c9d1d9; min-height: 100vh; display: flex; flex-direction: column; }
 
-    body {
-      background: linear-gradient(135deg, #0d1117 0%, #161b22 100%);
-      color: #c9d1d9;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+    header { background: linear-gradient(135deg, #7b3fff, #5a1f9e); padding: 1.5rem 2rem; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 8px rgba(0,0,0,0.5); }
+    header h1 { color: #fff; font-size: 1.8rem; }
+    nav a { color: #d1b3ff; margin-left: 1.5rem; text-decoration: none; font-weight: 600; }
+    nav a:hover { color: #fff; }
 
-    header {
-      background: rgba(10, 25, 47, 0.85);
-      padding: 1.5rem 2rem;
+    main { flex: 1; padding: 2rem 1rem; max-width: 1200px; margin: 0 auto; width: 100%; }
+
+    .hero { display: flex; flex-wrap: wrap; background: #1a0d29; border-radius: 12px; padding: 2rem; gap: 2rem; align-items: center; box-shadow: 0 10px 25px rgba(123,63,255,0.3); margin-bottom: 3rem; }
+    .hero-text { flex: 1 1 320px; }
+    .hero-text h2 { font-size: 2.8rem; color: #d1b3ff; margin-bottom: 1rem; }
+    .hero-text p { font-size: 1.2rem; color: #b3a3ff; margin-bottom: 2rem; }
+    .btn { background: linear-gradient(135deg, #7b3fff, #5a1f9e); color: #fff; font-weight: 700; font-size: 1.1rem; padding: 0.8rem 2rem; border: none; border-radius: 30px; cursor: pointer; }
+
+    #planos { background: #2a0d40; padding: 2rem; border-radius: 12px; box-shadow: 0 10px 25px rgba(123,63,255,0.2); margin-bottom: 3rem; }
+    #planos h3 { text-align: center; font-size: 2rem; color: #d1b3ff; margin-bottom: 1.5rem; }
+    .planos-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; }
+    .plano { background: #1f0a2a; border-radius: 16px; padding: 1.8rem 1.5rem; width: 280px; box-shadow: 0 8px 18px rgba(123,63,255,0.25); display: flex; flex-direction: column; align-items: center; }
+    .plano h4 { font-size: 1.5rem; margin-bottom: 0.5rem; color: #b499ff; }
+    .plano p { font-size: 1rem; margin-bottom: 1.2rem; color: #b3a3ff; text-align: center; }
+    .preco { font-size: 1.8rem; font-weight: 700; color: #d1b3ff; margin-bottom: 1.3rem; }
+    .botao-comprar { background: linear-gradient(135deg, #5a1f9e, #7b3fff); color: #fff; border: none; padding: 0.75rem 1.5rem; border-radius: 30px; font-weight: 600; width: 100%; cursor: pointer; margin-bottom: 0.5rem; }
+    .botao-comprar.teste-gratis { background: linear-gradient(135deg, #7b3fff, #d1b3ff); }
+
+    #beneficios { background: #1a0d29; padding: 2rem; border-radius: 12px; box-shadow: 0 10px 25px rgba(123,63,255,0.2); margin-bottom: 3rem; }
+    #beneficios h3 { text-align: center; font-size: 2rem; color: #d1b3ff; margin-bottom: 1.5rem; }
+    .beneficios-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 1.2rem; color: #b3a3ff; }
+    .beneficio-item { background: #2a0d40; padding: 1rem 1.5rem; border-radius: 12px; flex: 1 1 250px; text-align: center; font-weight: bold; }
+
+    /* FAQ */
+    #faq { background: #1a0d29; padding: 2rem; border-radius: 12px; margin-bottom: 3rem; }
+    #faq h3 { text-align: center; color: #d1b3ff; margin-bottom: 1.5rem; }
+    .faq-container { max-width: 800px; margin: auto; display: flex; flex-direction: column; gap: 10px; }
+    .faq-btn {
+      background: linear-gradient(135deg, #7b3fff, #5a1f9e);
+      color: #fff;
+      font-weight: 600;
+      padding: 0.8rem 1.5rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      text-align: left;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+      transition: background 0.3s;
     }
-
-    header h1 {
-      color: #58a6ff;
-      font-size: 1.8rem;
-    }
-
-    nav a {
-      color: #8ab4f8;
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    nav a:hover {
-      color: #ffa726;
-    }
-
-    main {
-      flex: 1;
-      padding: 2rem 1rem;
-      max-width: 1200px;
-      margin: 0 auto;
-      width: 100%;
-    }
-
-    .hero {
-      display: flex;
-      flex-wrap: wrap;
-      background: rgba(14, 23, 40, 0.8);
-      border-radius: 12px;
-      padding: 2rem;
-      gap: 2rem;
-      align-items: center;
-      box-shadow: 0 10px 25px rgba(21, 101, 192, 0.3);
-      margin-bottom: 3rem;
-    }
-
-    .hero-text {
-      flex: 1 1 320px;
-    }
-
-    .hero-text h2 {
-      font-size: 2.8rem;
-      color: #58a6ff;
-      margin-bottom: 1rem;
-    }
-
-    .hero-text p {
-      font-size: 1.2rem;
-      color: #a3bffa;
-      margin-bottom: 2rem;
-    }
-
-    .btn {
-      background: linear-gradient(135deg, #ffa726, #fb8c00);
-      color: #0d1117;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 0.8rem 2rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-    }
-
-    .hero-image {
-      flex: 1 1 320px;
-      text-align: center;
-    }
-
-    .hero-image img {
-      max-width: 100%;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(88, 166, 255, 0.4);
-    }
-
-    #planos {
-      background: rgba(21, 32, 56, 0.85);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(88, 166, 255, 0.2);
-      margin-bottom: 3rem;
-    }
-
-    #planos h3 {
-      text-align: center;
-      font-size: 2rem;
-      color: #58a6ff;
-      margin-bottom: 1.5rem;
-    }
-
-    .planos-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-    }
-
-    .plano {
-      background: rgba(14, 23, 40, 0.9);
-      border-radius: 16px;
-      padding: 1.8rem 1.5rem;
-      width: 280px;
-      box-shadow: 0 8px 18px rgba(251, 140, 0, 0.25);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .plano h4 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-      color: #ffa726;
-    }
-
-    .plano p {
-      font-size: 1rem;
-      margin-bottom: 1.2rem;
-      color: #a3bffa;
-      text-align: center;
-    }
-
-    .preco {
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: #58a6ff;
-      margin-bottom: 1.3rem;
-    }
-
-    .botao-comprar {
-      background: linear-gradient(135deg, #58a6ff, #1c3aa9);
-      color: #fff;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 30px;
-      font-weight: 600;
-      width: 100%;
-      cursor: pointer;
-      margin-bottom: 0.5rem;
-    }
-
-    .botao-comprar.teste-gratis {
-      background: linear-gradient(135deg, #fb8c00, #ffa726);
-    }
-
-    #beneficios {
-      background: rgba(10, 25, 47, 0.9);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(88, 166, 255, 0.2);
-      margin-bottom: 3rem;
-    }
-
-    #beneficios h3 {
-      text-align: center;
-      font-size: 2rem;
-      color: #58a6ff;
-      margin-bottom: 1.5rem;
-    }
-
-    .beneficios-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.2rem;
-      color: #a3bffa;
-    }
-
-    .beneficio-item {
-      background: rgba(21, 32, 56, 0.85);
+    .faq-btn:hover { background: linear-gradient(135deg, #5a1f9e, #7b3fff); }
+    .faq-content {
+      background: #2a0d40;
+      color: #b3a3ff;
       padding: 1rem 1.5rem;
       border-radius: 12px;
-      flex: 1 1 250px;
-      text-align: center;
-      font-weight: bold;
+      display: none;
+      animation: fadeIn 0.3s ease-in-out;
     }
+    .faq-arrow { transition: transform 0.3s; }
+    .faq-arrow.open { transform: rotate(90deg); }
 
-    #contato {
-      text-align: center;
-      padding: 2rem;
-    }
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-    #contato a {
-      text-decoration: none;
-      background: linear-gradient(135deg, #fb8c00, #ffa726);
-      padding: 0.75rem 2rem;
-      border-radius: 30px;
-      font-weight: 700;
-      color: #0d1117;
-    }
+    #contato { text-align: center; padding: 2rem; }
+    #contato p { color: #b3a3ff; font-size: 1.1rem; margin-bottom: 15px; }
+    #contato a { text-decoration: none; background: linear-gradient(135deg, #7b3fff, #5a1f9e); padding: 0.75rem 2rem; border-radius: 30px; font-weight: 700; color: #fff; }
 
-    footer {
-      background: rgba(10, 25, 47, 0.9);
-      color: #6e7d94;
-      text-align: center;
-      padding: 1rem;
-    }
+    footer { background: #111; color: #6e7d94; text-align: center; padding: 1rem; }
 
-    @media (max-width: 900px) {
-      .hero {
-        flex-direction: column;
-      }
-
-      .plano {
-        width: 100%;
-        max-width: 360px;
-      }
-    }
+    @media (max-width: 900px) { .hero { flex-direction: column; } .plano { width: 100%; max-width: 360px; } }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Stream IPTV Brasil</h1>
     <nav>
       <a href="#planos">Planos</a>
       <a href="#beneficios">Benefícios</a>
+      <a href="#faq">FAQ</a>
       <a href="#contato">Contato</a>
     </nav>
   </header>
@@ -257,9 +94,6 @@
         <h2>Assista TV em qualquer lugar, com sua família</h2>
         <p>Os melhores canais do Brasil e do mundo direto no seu dispositivo com alta qualidade, estabilidade e segurança.</p>
         <button class="btn" onclick="window.location.href='#planos'">Conheça nossos planos</button>
-      </div>
-      <div class="hero-image">
-        <img src="https://media.istockphoto.com/id/862621328/pt/foto/fam%C3%ADlia-feliz-no-sof%C3%A1-na-sala-de-relaxamento-e-usando-tablet-digital.jpg?s=612x612&w=0&k=20&c=OzkFtJtMPeBYHptZkZzhrIQTovAwJoxzFML5FPr4xYg=" alt="Família usando tablet">
       </div>
     </section>
 
@@ -301,31 +135,101 @@
       </div>
     </section>
 
+    <!-- FAQ -->
+    <section id="faq">
+      <h3>Perguntas Frequentes sobre IPTV</h3>
+      <div class="faq-container">
+        <button class="faq-btn">O que é IPTV? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>IPTV (Internet Protocol Television) é a tecnologia que permite a transmissão de canais de TV e conteúdos sob demanda pela internet, possibilitando assistir em tempo real ou quando desejar, em diversos dispositivos.</p>
+        </div>
+
+        <button class="faq-btn">Quais dispositivos são compatíveis com o serviço? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Nosso serviço funciona em Smart TVs, smartphones, tablets, computadores, além de dispositivos como MAG Box, Android TV Box, Fire TV Stick e outros que suportem aplicativos IPTV.</p>
+        </div>
+
+        <button class="faq-btn">Como faço para assinar e começar a usar? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Escolha o plano desejado, realize o pagamento pelo link seguro e receba por e-mail ou WhatsApp os dados de acesso (usuário, senha e link do servidor) para configurar no aplicativo IPTV de sua preferência.</p>
+        </div>
+
+        <button class="faq-btn">Posso usar o serviço em vários dispositivos simultaneamente? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Sim, cada plano oferece um número específico de conexões simultâneas. Verifique as condições do seu plano para saber quantos dispositivos podem ser usados ao mesmo tempo.</p>
+        </div>
+
+        <button class="faq-btn">Quais canais estão disponíveis? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Oferecemos uma ampla variedade de canais nacionais e internacionais, incluindo esportes, filmes, séries, notícias e entretenimento, todos em alta qualidade.</p>
+        </div>
+
+        <button class="faq-btn">O serviço é estável e seguro? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Sim, utilizamos servidores robustos e protegidos para garantir streaming contínuo, com alta estabilidade e segurança contra interrupções e acessos não autorizados.</p>
+        </div>
+
+        <button class="faq-btn">Existe suporte técnico disponível? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Sim, nosso suporte é rápido e eficiente, disponível via WhatsApp para ajudar com dúvidas, configurações e eventuais problemas técnicos.</p>
+        </div>
+
+        <button class="faq-btn">Posso testar o serviço antes de assinar? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Sim, oferecemos um teste gratuito por tempo limitado para que você possa avaliar a qualidade e a variedade dos canais antes de contratar um plano.</p>
+        </div>
+
+        <button class="faq-btn">Como faço para cancelar minha assinatura? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>O cancelamento pode ser solicitado a qualquer momento pelo nosso suporte via WhatsApp. Após o cancelamento, o acesso será mantido até o término do período contratado.</p>
+        </div>
+
+        <button class="faq-btn">Quais formas de pagamento são aceitas? <span class="faq-arrow">▶</span></button>
+        <div class="faq-content">
+          <p>Aceitamos pagamentos via cartão de crédito, boleto bancário e PIX, todos processados por plataformas seguras para garantir sua tranquilidade.</p>
+        </div>
+      </div>
+    </section>
+
     <section id="contato">
-      <h3>Entre em contato</h3>
-      <p>Fale com a gente pelo WhatsApp para tirar dúvidas ou contratar.</p>
-      <a href="https://wa.me/5562981563191" target="_blank">Chamar no WhatsApp</a>
+      <p>Tem dúvidas ou quer começar agora? Entre em contato com a gente pelo WhatsApp!</p>
+      <a href="https://wa.me/seunumerodowhatsapp" target="_blank">Fale Conosco no WhatsApp</a>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Stream IPTV Brasil. Todos os direitos reservados.
+    © 2025 Stream IPTV Brasil. Todos os direitos reservados.
   </footer>
 
   <script>
-    const numeroZap = "5562981563191";
+    const faqButtons = document.querySelectorAll('.faq-btn');
+    faqButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        const content = btn.nextElementSibling;
+        const arrow = btn.querySelector('.faq-arrow');
 
-    function comprar(link, plano) {
-      window.open(link, "_blank");
-      setTimeout(() => {
-        const mensagem = `Olá! Acabei de contratar o ${plano} pelo PagSeguro. Aqui está meu email para ativação: `;
-        window.open(`https://wa.me/${numeroZap}?text=${encodeURIComponent(mensagem)}`, "_blank");
-      }, 3000);
+        // Fecha todas as outras
+        faqButtons.forEach(otherBtn => {
+          if(otherBtn !== btn){
+            otherBtn.nextElementSibling.style.display = 'none';
+            otherBtn.querySelector('.faq-arrow').classList.remove('open');
+          }
+        });
+
+        // Alterna o clicado
+        const isOpen = content.style.display === 'block';
+        content.style.display = isOpen ? 'none' : 'block';
+        arrow.classList.toggle('open', !isOpen);
+      });
+    });
+
+    function comprar(url, plano) {
+      window.open(url, '_blank');
+      alert('Você selecionou: ' + plano);
     }
 
     function testeGratis() {
-      const mensagem = "Olá! Gostaria de solicitar um teste grátis do IPTV.";
-      window.open(`https://wa.me/${numeroZap}?text=${encodeURIComponent(mensagem)}`, "_blank");
+      alert('Teste grátis ativado! Confira seu e-mail ou WhatsApp para acessar.');
     }
   </script>
 </body>
